<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView android:layout_width="wrap_content"
               android:scaleType="centerCrop"
               android:src="@drawable/shop_bg"
               android:layout_height="@dimen/shop_bg_height"
               android:id="@+id/shopBg"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infoContainer"
            app:layout_constraintTop_toBottomOf="@+id/shopBg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >

        <android.support.constraint.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/simpleInfoLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tipsTv"
        >
            <TextView
                    android:text="@string/shopinfo_cut_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_12"
                    android:id="@+id/simpleTips1TitleTv"
                    android:background="@color/colorTipsTitleBgPink"
                    android:textColor="@color/colorTipsTitleTextPink"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/shopinfo_cut_content"
                    android:textSize="12sp"
                    android:id="@+id/simpleTips1ContentTv"
                    android:layout_toEndOf="@id/simpleTips1TitleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/simpleTips1TitleTv"
                    app:layout_constraintStart_toEndOf="@+id/simpleTips1TitleTv"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/shopinfo_post_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/simpleTips2TitleTv"
                    android:layout_toEndOf="@id/simpleTips2TitleTv"
                    android:textSize="@dimen/sp_12"
                    android:layout_marginStart="@dimen/default_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintTop_toBottomOf="@+id/simpleTips1TitleTv"/>
            <TextView
                    android:text="@string/shopinfo_post_content"
                    android:textSize="@dimen/sp_12"
                    android:singleLine="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintTop_toBottomOf="@+id/simpleTips1ContentTv"
                    app:layout_constraintStart_toEndOf="@+id/simpleTips2TitleTv"
                    android:layout_marginStart="@dimen/default_margin"/>
            <Button
                    android:text="@string/shopinfo_cut_nums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/moreBtn"
                    android:drawableEnd="@mipmap/down"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawablePadding="0dp"
                    android:minHeight="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/sp_12"
                    android:paddingRight="15dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"/>
        </android.support.constraint.ConstraintLayout>
        <TextView
                android:text="@string/shopinfo_shop_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shopTitleTv"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/shopinfo_tips_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tipsTv"
                app:layout_constraintTop_toBottomOf="@+id/shopTitleTv"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/default_margin"
                android:typeface="sans"
                android:layout_marginTop="@dimen/default_margin"/>
        <android.support.constraint.ConstraintLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@+id/simpleInfoLayout"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.075">
            <TextView
                    android:text="@string/shop_info_offer_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/offerTitleTv" android:textStyle="bold"
                    android:textSize="18sp" android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/shopinfo_post_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/postTitleTv"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/tips3TitleTv"/>
            <TextView
                    android:text="@string/shopinfo_cut_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/offer1TitleTv"
                    android:textSize="@dimen/sp_12"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@color/colorTipsTitleBgPink"
                    android:textColor="@color/colorTipsTitleTextPink"
                    app:layout_constraintTop_toBottomOf="@+id/offerTitleTv"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/shopinfo_offer_content"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tips1contentTv" app:layout_constraintStart_toEndOf="@+id/offer1TitleTv"
                    android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/offerTitleTv"/>
            <TextView
                    android:text="@string/shopinfo_tips2_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorTipsTitleBgPink"
                    android:textColor="@color/colorTipsTitleTextPink"
                    app:layout_constraintTop_toBottomOf="@+id/offer1TitleTv"
                    android:id="@+id/tips2TitleTv"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/shopinfo_tips2_content"
                    android:textSize="@dimen/sp_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintStart_toEndOf="@+id/tips2TitleTv"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tips1contentTv"
                    android:id="@+id/tips2ContentTv"/>

            <TextView
                    android:text="@string/shopinfo_tips3_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_12"
                    android:background="@color/colorTipsTitleBgPink"
                    android:textColor="@color/colorTipsTitleTextPink"
                    app:layout_constraintTop_toBottomOf="@+id/tips2TitleTv"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:id="@+id/tips3TitleTv"/>
            <TextView
                    android:text="@string/shopinfo_tips3_content"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/tips3TitleTv"
                    android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tips2ContentTv"/>
            <TextView
                    android:text="@string/shopinfo_post_content"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/postTitleTv"
                    app:layout_constraintStart_toStartOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
    <ImageView
            android:layout_width="@dimen/avatar_height"
            android:layout_height="@dimen/avatar_height"
            app:srcCompat="@mipmap/avatar"
            android:id="@+id/shopAvatar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/shopBg"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/up"
            android:id="@+id/menuBackIv"
            android:layout_marginBottom="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_margin"/>
</android.support.constraint.ConstraintLayout>
