<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_view_height">

    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorBottomTopLayoutBg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="3"
            android:id="@+id/topLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/bottomLayout">
        <TextView
                android:text="@string/bottom_view_cut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAlignment="center"/>
    </RelativeLayout>
    <android.support.constraint.ConstraintLayout
            android:id="@+id/bottomLayout"
            android:orientation="horizontal"
            android:background="@color/colorBottomPriceLimitBg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="7"
            app:layout_constraintTop_toBottomOf="@+id/topLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5">
        <TextView
                android:text="@string/bottom_view_price_limit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorGray"
                android:textColor="@color/colorBottomTextColor"
                android:padding="@dimen/dp_4"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/bottomLayout"
            app:layout_constraintTop_toTopOf="@+id/topLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo"
                android:id="@+id/logoIv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="center"
                android:layout_marginBottom="@dimen/default_margin"/>
        <TextView
                android:text="@string/bottom_view_tips1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBottomTextColor"
                app:layout_constraintStart_toEndOf="@+id/logoIv"
                app:layout_constraintBottom_toTopOf="@+id/tips2Tv"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/bottom_view_tips2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tips2Tv"
                android:textColor="@color/colorBottomTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/logoIv"
                android:layout_marginBottom="@dimen/default_margin"
                android:textSize="@dimen/sp_12"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
